Bug 951694 - Sources pane can overlap content over the source editor, r=fitzgen
UltraBlame original commit: 40978aa5238d1de302fc1f5782466f4d47ad19f2

--- a/browser/themes/windows/devtools/debugger.css
+++ b/browser/themes/windows/devtools/debugger.css
@@ -5,10 +5,6 @@
 
 
 
-#sources-pane {
-  min-width: 50px;
-}
-
 #sources-pane > tabs {
   -moz-border-end: 1px solid #222426; 
 }
@@ -73,6 +69,7 @@
 #source-progress-container {
   background: url(background-noise-toolbar.png) rgb(61,69,76);
   
+  min-width: 1px;
   min-height: 1px;
   color: white;
 }
